# bc-mur-rust

./: .gitignore  Cargo.toml  README.md
src/: animate.rs  color.rs  correction.rs  error.rs  lib.rs  logo.rs  main.rs  prores.rs  qr_matrix.rs  render.rs  styles.rs
src/cmd/: animate_cmd.rs  frames.rs  mod.rs  single.rs
tests/: integration.rs
